# minisat-stripped

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh  buildall.sh
core/: Main.cc  Solver.cc  Solver.h  SolverTypes.h
minisat/core/: Main.cc  Makefile  Solver.cc  Solver.h  SolverTypes.h
minisat/mtl/: Alg.h  Alloc.h  Heap.h  Vec.h  config.mk  template.mk
minisat/simp/: Main.cc  Makefile  SimpSolver.cc
minisat/utils/: Options.cc  ParseUtils.h  System.cc
mtl/: IntTypes.h  Map.h  Vec.h  template.mk
simp/: Main.cc  SimpSolver.cc
tests/inputs/: benchmarks.txt  easy.txt  readme.md
utils/: Options.cc  Options.h  System.cc  System.h
